# Online-Research-Engine

./: .gitignore  example.py  pyproject.toml
src/: bing_news_search_service.py  bing_web_search_service.py  fetch_web_content.py  llm_answer.py  main.py  retrieval.py  search_service.py  serper_service.py
src/online_research_engine/: fetch_web_content.py  llm_answer.py  locate_reference.py  retrieval.py  search_services.py  web_scraper.py
src/online_research_engine/config/: config.yaml
tests/integration/: test_fetch_web_content.py  test_llm_answer.py  test_locate_reference.py  test_retrieval.py  test_search_services.py  test_web_scraper.py
